# daily-dashboard

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  config.example.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
dashboard/: __init__.py  __main__.py  app.py
dashboard/components/: __init__.py  links_panel.py  network_panel.py  news_panel.py  status_bar.py  weather_panel.py
dashboard/models/: __init__.py  config.py  news_item.py  scan_result.py  weather.py
dashboard/services/: __init__.py  cache.py  feed_parser.py  known_hosts.py  network_info.py  network_scanner.py  nmap_scanner.py  weather_service.py
tests/: __init__.py  conftest.py
tests/test_models/: __init__.py  test_config.py  test_news_item.py  test_scan_result.py
tests/test_services/: __init__.py  test_cache.py
