[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daily-dashboard"
dynamic = ["version"]
description = "A terminal-based dashboard for news feeds, weather, and network scanning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Costel Grigoras", email = "costel@dropup.studio"}
]
maintainers = [
    {name = "Costel Grigoras", email = "costel@dropup.studio"}
]
keywords = [
    "terminal",
    "dashboard",
    "tui",
    "rss",
    "news",
    "network",
    "scanner",
    "weather",
    "textual",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Terminals",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=0.40.0,<1.0.0",
    "httpx>=0.25.0,<1.0.0",
    "feedparser>=6.0.0,<7.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "rich>=13.0.0,<15.0.0",
    "scapy>=2.5.0,<3.0.0",
    "mac-vendor-lookup>=0.1.12,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "pre-commit>=3.6.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/dropup-studio/daily-dashboard"
Documentation = "https://github.com/dropup-studio/daily-dashboard#readme"
Repository = "https://github.com/dropup-studio/daily-dashboard.git"
Issues = "https://github.com/dropup-studio/daily-dashboard/issues"
Changelog = "https://github.com/dropup-studio/daily-dashboard/blob/main/CHANGELOG.md"

[project.scripts]
daily-dashboard = "dashboard.__main__:main"

[tool.setuptools.dynamic]
version = {attr = "dashboard.__version__"}

[tool.setuptools.packages.find]
include = ["dashboard*"]

[tool.setuptools.package-data]
dashboard = ["py.typed"]

# Ruff configuration
[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
    "PLR0911", # too many return statements
    "PLR0912", # too many branches
    "PLR0915", # too many statements
    "PLW0603", # global statement (needed for signal handlers)
    "PLC0415", # import not at top level (lazy imports for performance)
    "RUF012",  # mutable class attributes (Textual framework pattern)
    "ARG002",  # unused method argument (required by framework APIs)
    "SIM117",  # nested with statements (Textual compose pattern)
    "B007",    # unused loop variable (scapy API pattern)
    "SIM105",  # contextlib.suppress (explicit try/except clearer)
    "PTH123",  # Path.open() - open() is clearer in some contexts
    "SIM102",  # nested if statements (clearer in some cases)
    "SIM108",  # ternary operator (if/else clearer for longer expressions)
    "B904",    # raise from (intentional re-raising with new message)
    "PLW2901", # loop variable overwritten (common pattern for line processing)
    "F841",    # unused variable (kept for debugging/clarity)
    "F821",    # undefined name (forward reference in type hint)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "PLR", "PTH123"]
"dashboard/__main__.py" = ["ARG001"]  # signal handler frame argument
"dashboard/services/network_scanner.py" = ["F401", "ERA001"]  # import check, example comment

[tool.ruff.lint.isort]
known-first-party = ["dashboard"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Mypy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "feedparser.*",
    "scapy.*",
    "mac_vendor_lookup.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["dashboard"]
branch = true
omit = [
    "tests/*",
    "dashboard/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
# Start with lower threshold, increase as more tests are added
fail_under = 10
show_missing = true
